:wheelchair: 프로젝트 전체적인 코드 reformation